chore: adding posts module with populate
